--- a/.github/workflows/daily-update.yml
+++ b/.github/workflows/daily-update.yml
@@ -2,9 +2,7 @@ name: Daily Update
 
 on:
   schedule:
-    # 毎日午前1時（UTC）に実行
-    # JST（日本時間）の午前1時は UTC の前日16時なので、UTC 16:00 に設定
-    # ただし、ユーザーが「am1:00」と言っているので、日本時間の午前1時を想定
+    # 毎日午前1時（JST）に実行
     # UTC 16:00 = JST 01:00 (次の日)
     - cron: '0 16 * * *'
   workflow_dispatch: # 手動実行も可能にする
@@ -18,6 +16,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
       
       - name: Configure Git
         run: |
@@ -29,8 +30,7 @@ jobs:
           git commit --allow-empty -m "Daily update: $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
       
       - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: main
+        run: |
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git push origin main
 
