Fix: iOS Chromeからホーム画面追加時の問題を修正
- manifest.jsonにscopeを追加
- iOS PWA用のmetaタグを追加（apple-mobile-web-app-capable等）
- Chromeからホーム画面に追加した際にSafariで開かれる問題を改善

--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "short_name": "YOKO's Garden",
   "description": "Tiger-themed habit tracker that runs 100% in the browser",
   "start_url": "/yokos-garden/",
+  "scope": "/yokos-garden/",
   "display": "standalone",
   "background_color": "#fff5f5",
   "theme_color": "#ff9a56",
