アクセサリー追加・表示バグ修正・位置調整
- 新しい動物用アクセサリー追加（各3種: うさぎ/パンダ/猫）
- 購入したアクセサリーが表示されないバグ修正
- アクセサリーの位置を顔の下・横に調整
- ペンギンスキンの耳バグ修正
- デバッグ用コイン追加ボタン追加
- ショップアイテムを価格順に並び替え
- 重複CSSの整理

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tiger-themed habit tracker that runs 100% in the browser. Cute, fast, and private.",
   "main": "generate-icons.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "playwright test"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "homepage": "https://github.com/Yokko405/yokos-garden#readme",
   "dependencies": {
     "sharp": "^0.34.5"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.58.2",
+    "serve": "^14.2.5"
   }
 }
